--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,14 @@
 # * http://www.objc.io/issue-6/travis-ci.html
 # * https://github.com/supermarin/xcpretty#usage
 
-osx_image: xcode7.3
 language: objective-c
-# cache: cocoapods
-# podfile: Example/Podfile
-# before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
-# - pod install --project-directory=Example
+osx_image: xcode8
+
+env:
+  - DESTINATION='platform=iOS Simulator,name=iPad Retina'
+  - DESTINATION='platform=iOS Simulator,name=iPhone 5'
+  - DESTINATION='platform=iOS Simulator,name=iPhone 6'
+  - DESTINATION='platform=iOS Simulator,name=iPhone 7'
 
 script:
-- set -o pipefail && xcodebuild test -workspace Example/RevealMenuController.xcworkspace -scheme RevealMenuController-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
-- pod lib lint
+  - set -o pipefail && xcodebuild -workspace Example/RevealMenuController.xcworkspace -scheme RevealMenuController-Example -destination "$DESTINATION" ONLY_ACTIVE_ARCH=NO | xcpretty
