--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,4 +1,5 @@
 use_frameworks!
+platform :ios, '9.0'
 
 target 'RevealMenuController_Example' do
   pod 'RevealMenuController', :path => '../'
@@ -7,7 +8,7 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     target.build_configurations.each do |config|
-      config.build_settings['SWIFT_VERSION'] = '3.0'
+      config.build_settings['SWIFT_VERSION'] = '4.2'
     end
   end
 end
